--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ foundationLayoutAndroid = "1.6.6"
 material3Android = "1.2.1"
 navigationFragmentKtx = "2.6.0"
 navigationUiKtx = "2.6.0"
+supportCompat = "27.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,6 +28,7 @@ androidx-foundation-layout-android = { group = "androidx.compose.foundation", na
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+support-compat = { group = "com.android.support", name = "support-compat", version.ref = "supportCompat" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
