--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskTime"
         tools:targetApi="31">
-        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name=".AlarmReceiver"
+            android:enabled="true"/>
 
         <activity
             android:name=".MainActivity"
